--- a/index.Rmd
+++ b/index.Rmd
@@ -13,6 +13,8 @@ output:
 
 We set out to find whether value investing strategy such as Joel Greenblatt's earning yields and Piotroski's F-score can actually beat the Thai stock market. The fundamental data are obtained from [Gurufocus](http://gurufocus.com) while the benchmark SET TRI is obtained from [Stock Exchange of Thailand](http://set.or.th). We perform support vector machine, boosted logistic regression and random forest classification based on the data, as well as a backtest to verify the models. Most our models perform better than a coin toss with random forest achieving the highest accuracy and sensitivity of 85.13% and 79.25% respectively (20.08% annual return).
 
+Visit our github respository [here](https://github.com/cstorm125/value/)
+
 # Data Processing
 
 Attach necessary R packages and set seed for reproduciblity.
