--- a/codebook.Rmd
+++ b/codebook.Rmd
@@ -12,11 +12,11 @@ output:
 # Data Overview
 The ```tidy Thai stock dataset``` includes annual fundamental data of 463 Thai stocks in ```udf.csv``` and annual return of SET TRI in ```set_return.csv``` from 2002-2015. Monetary unit is THB.
 
-This codebook demonstrates how fundamental data on Thai stocks from the [Gurufocus](http://gurufocus.com) and SET TRI from [Stock Exchange of Thailand](http://set.or.th) are transformed into the tidy format used in this [analysis](index.html).
+This codebook demonstrates how fundamental data on Thai stocks from the [Morningstar](http://www.morningstar.com) and SET TRI from [Stock Exchange of Thailand](http://set.or.th) are transformed into the tidy format used in this [analysis](index.html).
 
 # Getting and Cleaning Data
 ## Thai Stock Data
-The data on Thai stock fundamentals are obtained from [Gurufocus API](http://gurufocus.com). The symbols associated wit the stock market was obtained by using a filter on the website and saved to ```symbols.csv```. We download JSON associated with this and save them to the ```stocks``` folder.
+The data on Thai stock fundamentals are obtained from [Morningstar](http://www.morningstar.com). The symbols associated wit the stock market was obtained by using a filter on the website and saved to ```symbols.csv```. We download JSON associated with this and save them to the ```stocks``` folder.
 ```{r, eval=FALSE}
 library(jsonlite)
 library(httr)
@@ -164,7 +164,7 @@ write.csv(udf,file='udf.csv',row.names=FALSE)
 ```
 
 # Variable Description
-The dataset includes annual fundamental data of 463 Thai stocks from 2002-2015. The variables are divided into 7 groups same as the financial statement format of [Gurufocus](http://gurufocus.com) namely:
+The dataset includes annual fundamental data of 463 Thai stocks from 2002-2015. The variables are divided into 7 groups same as the financial statement format of [Morningstar](http://www.morningstar.com) namely:
 
 * ```Income Statement```: column 4-31
 * ```Balance Sheet```: column 32-81
